--- a/sass/utilities/_index.scss
+++ b/sass/utilities/_index.scss
@@ -3,3 +3,11 @@
 @forward "spacing";
 @forward "container";
 @forward "font-weights";
+@forward "font-families";
+@forward "box-shadow";
+@forward "text-center";
+@forward "flow";
+@forward "uppercase";
+@forward "flex-group";
+@forward "lead";
+@forward "shift-up";
